feat(web): cria novos cards

--- a/MinhaCantina.Web/Source/Pages/Home.razor
+++ b/MinhaCantina.Web/Source/Pages/Home.razor
@@ -4,11 +4,31 @@
 
 <h1>Produtos</h1>
 
-<div class="card" style="width: 18rem;">
-    <img src="/imagens/Coxinha.webp" class="card-img-top" alt="...">
-    <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-</div>
+<section class="d-flex gap-3">
+	<div class="card" style="width: 18rem;">
+		<img src="/imagens/Coxinha.webp" class="card-img-top" alt="...">
+		<div class="card-body">
+			<h5 class="card-title">Coxinha</h5>
+			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+			<a href="#" class="btn btn-primary">Go somewhere</a>
+		</div>
+	</div>
+
+	<div class="card" style="width: 18rem;">
+		<img src="/imagens/Coca-cola.webp" class="card-img-top" alt="...">
+		<div class="card-body">
+			<h5 class="card-title">Coca-cola</h5>
+			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+			<a href="#" class="btn btn-primary">Go somewhere</a>
+		</div>
+	</div>
+
+	<div class="card" style="width: 18rem;">
+		<img src="/imagens/Brawie.jpg" class="card-img-top" alt="...">
+		<div class="card-body">
+			<h5 class="card-title">Brownie</h5>
+			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+			<a href="#" class="btn btn-primary">Go somewhere</a>
+		</div>
+	</div>
+</section>
