feat(web): componentiza os cards

--- a/MinhaCantina.Web/Source/Pages/Home.razor
+++ b/MinhaCantina.Web/Source/Pages/Home.razor
@@ -23,12 +23,7 @@
 		</div>
 	</div>
 
-	<div class="card" style="width: 18rem;">
-		<img src="/imagens/Brawie.jpg" class="card-img-top" alt="...">
-		<div class="card-body">
-			<h5 class="card-title">Brownie</h5>
-			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
-		</div>
-	</div>
+	<Card  Titulo="Coxinha" Descricao="Salgado frito de frango e requeijão"/imagem/Coca-cola.webp"/>
+	<Card Titulo="Coxinha " Caminhoimagem="/imagem/Coxinha.webp" />
+	<Card Titulo="Coca-cola" Caminhoimagem="/imagem/Coca-cola.webp" />
 </section>
